{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 136,
  "lineage": "2bec7398-9d77-5979-1f32-0a5dd1c35e54",
  "resources": [
    {
      "module": "module.security[\"-1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:security-group/sg-0d6816ebde8a6f51e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow all traffic to go out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-018283a6bba19be69"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6816ebde8a6f51e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH access from anywhere",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018283a6bba19be69"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250422165139688100000005",
            "name_prefix": "terraform-",
            "owner_id": "489994096722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-rds-ecs-sg"
            },
            "tags_all": {
              "Name": "dev-rds-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-090c614e1d2321a53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.security.aws_security_group.wordpress_sg",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_subnet.private_subnet_1a",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security[\"-1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:security-group/sg-018283a6bba19be69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to go out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018283a6bba19be69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 83,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 83
              }
            ],
            "name": "terraform-20250422165135181900000004",
            "name_prefix": "terraform-",
            "owner_id": "489994096722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-wordpress-ecs-sg"
            },
            "tags_all": {
              "Name": "dev-wordpress-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-090c614e1d2321a53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_association",
            "module.vpc.aws_route_table_association.public_subnet_association",
            "module.vpc.aws_subnet.private_subnet_1a",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03cfb27a3eb549233",
            "arn": "arn:aws:ec2:us-east-1:489994096722:elastic-ip/eipalloc-03cfb27a3eb549233",
            "association_id": "eipassoc-0615198d0203a09da",
            "domain": "vpc",
            "id": "eipalloc-03cfb27a3eb549233",
            "network_border_group": "us-east-1",
            "network_interface": "eni-009a4e2ccdc9c3e7f",
            "private_dns": "ip-172-16-0-138.ec2.internal",
            "private_ip": "172.16.0.138",
            "public_dns": "ec2-34-192-28-74.compute-1.amazonaws.com",
            "public_ip": "34.192.28.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:internet-gateway/igw-006741bb4532908f6",
            "id": "igw-006741bb4532908f6",
            "owner_id": "489994096722",
            "tags": {
              "Name": "dev-nginx-us-east-1-IGW"
            },
            "tags_all": {
              "Name": "dev-nginx-us-east-1-IGW"
            },
            "vpc_id": "vpc-090c614e1d2321a53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03cfb27a3eb549233",
            "association_id": "eipassoc-0615198d0203a09da",
            "connectivity_type": "public",
            "id": "nat-03d2da216a4367def",
            "network_interface_id": "eni-009a4e2ccdc9c3e7f",
            "private_ip": "172.16.0.138",
            "public_ip": "34.192.28.74",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d5736c7012df6e6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:route-table/rtb-05198a80068748eb5",
            "id": "rtb-05198a80068748eb5",
            "owner_id": "489994096722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d2da216a4367def",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-nginx-us-east-1-Private-RT"
            },
            "tags_all": {
              "Name": "dev-nginx-us-east-1-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-090c614e1d2321a53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:route-table/rtb-01c5fa4dd8f579a52",
            "id": "rtb-01c5fa4dd8f579a52",
            "owner_id": "489994096722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006741bb4532908f6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-nginx-us-east-1-Public-RT"
            },
            "tags_all": {
              "Name": "dev-nginx-us-east-1-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-090c614e1d2321a53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad0b2881d7d3a64f",
            "route_table_id": "rtb-05198a80068748eb5",
            "subnet_id": "subnet-08693142d97180c57"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet_1a",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0088527cdc52f3947",
            "route_table_id": "rtb-05198a80068748eb5",
            "subnet_id": "subnet-02458eed1f708d7f3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet_1a",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f452319f0f30e74",
            "route_table_id": "rtb-01c5fa4dd8f579a52",
            "subnet_id": "subnet-08d5736c7012df6e6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b41b7eb26a7ed5ee",
            "route_table_id": "rtb-01c5fa4dd8f579a52",
            "subnet_id": "subnet-0992e09134603cbe0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:subnet/subnet-08693142d97180c57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08693142d97180c57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-nginx-us-east-1-private_Subnet-1"
            },
            "tags_all": {
              "Name": "dev-nginx-us-east-1-private_Subnet-1"
            },
            "vpc_id": "vpc-090c614e1d2321a53"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:subnet/subnet-02458eed1f708d7f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02458eed1f708d7f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-nginx-us-east-1-private_Subnet-2"
            },
            "tags_all": {
              "Name": "dev-nginx-us-east-1-private_Subnet-2"
            },
            "vpc_id": "vpc-090c614e1d2321a53"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:subnet/subnet-08d5736c7012df6e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d5736c7012df6e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-nginx-us-east-1-public_Subnet-1"
            },
            "tags_all": {
              "Name": "dev-nginx-us-east-1-public_Subnet-1"
            },
            "vpc_id": "vpc-090c614e1d2321a53"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:subnet/subnet-0992e09134603cbe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0992e09134603cbe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-nginx-us-east-1-public_Subnet-2"
            },
            "tags_all": {
              "Name": "dev-nginx-us-east-1-public_Subnet-2"
            },
            "vpc_id": "vpc-090c614e1d2321a53"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"dev\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:489994096722:vpc/vpc-090c614e1d2321a53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-050ea784fcbb784d4",
            "default_route_table_id": "rtb-0bfe4a60df17fba96",
            "default_security_group_id": "sg-05f4d6d0edae4b390",
            "dhcp_options_id": "dopt-ebe0d491",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090c614e1d2321a53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfe4a60df17fba96",
            "owner_id": "489994096722",
            "tags": {
              "Name": "dev-nginx-us-east-1-vpc-1"
            },
            "tags_all": {
              "Name": "dev-nginx-us-east-1-vpc-1"
            }
          }
        }
      ]
    }
  ]
}